--- a/sourse/pug/blocks/sDontGetLost/_sDontGetLost.scss
+++ b/sourse/pug/blocks/sDontGetLost/_sDontGetLost.scss
@@ -28,8 +28,8 @@
 			order: 1;
 		}
 		img {
-			width: rem(155);
-			height: rem(155);
+			// width: rem(155);
+			// height: rem(155);
 			border-radius: 20px;
 		}
 	}
