--- a/sourse/pug/blocks/sPrice/_sPrice.scss
+++ b/sourse/pug/blocks/sPrice/_sPrice.scss
@@ -77,17 +77,17 @@
 			font-size: rem(18);
 			margin-bottom: 0;
 		}
-		&:hover {
-			.sPrice__show {
-				opacity: 1;
-				pointer-events: all;
-			}
-		}
+		// &:hover {
+		// 	.sPrice__show {
+		// 		opacity: 1;
+		// 		pointer-events: all;
+		// 	}
+		// }
 	}
 	&__show {
 		@include mt;
-		opacity: 0;
-		pointer-events: none;
+		opacity: 1;
+		pointer-events: all;
 		position: absolute;
 		bottom: -160px;
 		left: -246px;
