--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -340,7 +340,7 @@
 	&__input-title{
 		position: absolute;
 		// padding-left: $input-padding-x;
-		left: $input-padding-x;
+		left: rem(18.600);
 		top: var(--sp-y); 
 		font-size: var(--fz);
 		color: #A3A3A3; 
