--- a/sourse/pug/blocks/sWayToContact/_sWayToContact.pug
+++ b/sourse/pug/blocks/sWayToContact/_sWayToContact.pug
@@ -44,8 +44,8 @@ mixin sWayToContact(data)
 						+e.content
 							+e.social
 								h5 WhatsApp
-								a(href="tel+79001121212") +7 900 112 12 12
+								a(href="tel:+79001121212") +7 900 112 12 12
 							+e.social
 								h5 Telegram
-								a(href="tel+79001121212") +7 900 112 12 12
+								a(href="tel:+79001121212") +7 900 112 12 12
 	// end sWayToContact
